--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,14 @@
           </includes>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <doclint>none</doclint>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
