--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
   <modules>
     <module>echo</module>
     <module>sonar-orchestrator</module>
+    <module>sonar-orchestrator-junit4</module>
+    <module>sonar-orchestrator-junit5</module>
   </modules>
 
   <scm>
@@ -37,6 +39,7 @@
   </issueManagement>
 
   <properties>
+    <version.surefire.plugin>3.0.0</version.surefire.plugin>
     <commonsIO.version>2.6</commonsIO.version>
     <commonsLang.version>2.6</commonsLang.version>
     <commonsExec.version>1.3</commonsExec.version>
@@ -58,6 +61,25 @@
     <maven.compiler.release>8</maven.compiler.release>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>3.0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>3.9.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>2.28.2</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <build>
     <plugins>
       <plugin>
