--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -44,7 +44,7 @@ build_task:
     folder: ${CIRRUS_WORKING_DIR}/.m2/repository
   build_script:
     - source cirrus-env BUILD
-    - regular_mvn_build_deploy_analyze
+    - regular_mvn_build_deploy_analyze -X
     - ./check-license-compliance.sh
   cleanup_before_cache_script: cleanup_maven_repository
   on_failure:
