--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
   </issueManagement>
 
   <properties>
-    <version.surefire.plugin>3.0.0</version.surefire.plugin>
+    <version.surefire.plugin>3.1.0</version.surefire.plugin>
     <commonsIO.version>2.7</commonsIO.version>
     <commonsLang.version>2.6</commonsLang.version>
     <commonsExec.version>1.3</commonsExec.version>
@@ -48,7 +48,7 @@
     <slf4j.version>1.7.2</slf4j.version>
     <version.jacoco.plugin>0.8.10</version.jacoco.plugin>
     <sonar.exclusions>
-      **/com/sonar/orchestrator/echo/**/*.java,**/com/sonar/orchestrator/test/**/*.java,target/generated-sources/**/*
+      **/com/sonar/orchestrator/echo/**/*.java,target/generated-sources/**/*
     </sonar.exclusions>
 
     <!-- used for deployment to SonarSource Artifactory -->
@@ -79,19 +79,6 @@
   </dependencyManagement>
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${version.jacoco.plugin}</version>
-        <configuration>
-          <excludes>
-            <exclude>**/*.zip</exclude>
-          </excludes>
-          <includes>
-            <include>com/sonar/orchestrator/**</include>
-          </includes>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
