--- a/sonar-orchestrator/pom.xml
+++ b/sonar-orchestrator/pom.xml
@@ -181,7 +181,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
             <argLine>
-                @{argLine} --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
+                --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
             </argLine>
           </configuration>
         </plugin>
