--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 
   <properties>
     <version.surefire.plugin>3.0.0</version.surefire.plugin>
+    <version.deploy.plugin>3.0.0-M1</version.deploy.plugin>
     <commonsIO.version>2.7</commonsIO.version>
     <commonsLang.version>2.6</commonsLang.version>
     <commonsExec.version>1.3</commonsExec.version>
