--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -59,10 +59,8 @@ promote_task:
     cpu: 1
     memory: 1G
   env:
-    #promotion cloud function
     GITHUB_TOKEN: VAULT[development/github/token/${CIRRUS_REPO_OWNER}-${CIRRUS_REPO_NAME}-promotion token]
-    GCF_ACCESS_TOKEN: VAULT[development/kv/data/promote data.token]
-    PROMOTE_URL: VAULT[development/kv/data/promote data.url]
+    ARTIFACTORY_PROMOTE_ACCESS_TOKEN: VAULT[development/artifactory/token/${CIRRUS_REPO_OWNER}-${CIRRUS_REPO_NAME}-promoter access_token]
   maven_cache:
     folder: ${CIRRUS_WORKING_DIR}/.m2/repository
   script:
