--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,6 @@
   <properties>
     <license.name>GNU LGPL v3</license.name>
     <version.surefire.plugin>3.5.2</version.surefire.plugin>
-    <commonsIO.version>2.7</commonsIO.version>
     <commonsLang.version>2.6</commonsLang.version>
     <commonsExec.version>1.3</commonsExec.version>
     <guava.version>18.0</guava.version>
@@ -64,6 +63,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.19.0</version>
+      </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
         <artifactId>jsr305</artifactId>
