--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,6 @@
   <properties>
     <license.name>GNU LGPL v3</license.name>
     <version.surefire.plugin>3.5.2</version.surefire.plugin>
-    <commonsLang.version>2.6</commonsLang.version>
     <guava.version>18.0</guava.version>
     <junit.version>4.13.2</junit.version>
     <slf4j.version>2.0.11</slf4j.version>
@@ -76,6 +75,11 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-exec</artifactId>
         <version>1.5.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.18.0</version>
       </dependency>
       <dependency>
         <groupId>org.assertj</groupId>
