--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,6 @@
     <license.name>GNU LGPL v3</license.name>
     <version.surefire.plugin>3.5.2</version.surefire.plugin>
     <commonsLang.version>2.6</commonsLang.version>
-    <commonsExec.version>1.3</commonsExec.version>
     <guava.version>18.0</guava.version>
     <junit.version>4.13.2</junit.version>
     <slf4j.version>2.0.11</slf4j.version>
@@ -72,6 +71,11 @@
         <groupId>com.google.code.findbugs</groupId>
         <artifactId>jsr305</artifactId>
         <version>3.0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-exec</artifactId>
+        <version>1.5.0</version>
       </dependency>
       <dependency>
         <groupId>org.assertj</groupId>
